Fixed issues with navbar not showing
Fixed the issue where the navbar was not displaying, and added a logo.

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
+  --background: #1a1a1a;
   --foreground: #ffffff;
 }
 
@@ -12,10 +12,10 @@
   --font-mono: var(--font-geist-mono);
 }
 
-@media (prefers-color-scheme: light) {
+@media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
-    --foreground: #383636;
+    --foreground: #e0e0e0;
   }
 }
 
